<resources>
    <string name="app_name">Movie Explorer</string>
    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="sort_by_popularity">Sort by Popularity</string>
    <string name="sort_by_rating">Sort by Rating</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="title">Movie Title</string>
    <string name="average_rating">5.0/</string>
    <string name="plot_summary">Plot Summary</string>
    <string name="release_date">July 2010</string>
</resources>
