<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.CardView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="4dp"
        >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/movie_item_backdrop_poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:src="@drawable/grey_placeholder"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/movie_item_poster"
                            android:adjustViewBounds="true"
                            android:src="@drawable/placeholder"
                            android:layout_marginLeft="50dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="8dp"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical">

                        <TextView
                            style="@style/TitleTextStyle"
                            android:id="@+id/movie_item_title"
                            android:text="@string/title"
                            android:layout_width="wrap_content"
                            />

                        <TextView
                            style="@style/SecondaryTitleTextStyle"
                            android:layout_width="wrap_content"
                            android:id="@+id/movie_item_release_date"
                            android:text="@string/release_date"
                            />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                style="@style/SecondaryTitleTextStyle"
                                android:layout_width="wrap_content"
                                android:id="@+id/movie_item_average_rating"
                                android:text="@string/average_rating"/>
                            <TextView
                                android:layout_height="wrap_content"
                                android:layout_width="wrap_content"

                                android:text="10"/>

                        </LinearLayout>


                        <TextView
                            style="@style/BodyTextStyle"
                            android:id="@+id/movie_item_vote_count"
                            android:text="@string/hello_world"/>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                style="@style/TitleTextStyle"
                android:text="@string/plot_summary"
                />
            <TextView
                style="@style/BodyTextStyle"
                android:id="@+id/movie_item_plot_summary"
                android:text="@string/hello_world"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>